Add isCrawling state and loadingSpinner to Frontend